<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="?android:listSeparatorTextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/memory_title_label" />

                    <EditText
                        android:id="@+id/memory_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/memory_title_hint"
                        android:text="@string/memory_title_hint"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/favorite_switch_text" />

                    <Switch
                        android:id="@+id/favorite_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:thumb="@android:drawable/star_on"
                        android:thumbTintMode="multiply"
                        android:trackTint="#FF0000"
                        android:trackTintMode="multiply" />

                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/memory_photo"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:background="@android:color/darker_gray"
                    android:contentDescription="@string/memory_photo_no_image_description"
                    android:cropToPadding="true"
                    android:layout_gravity="center_horizontal"

                    android:scaleType="centerInside" />

                <ImageButton
                    android:id="@+id/memory_camera"
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/memory_photo_no_image_description"
                    android:src="@android:drawable/ic_menu_camera" />
            </LinearLayout>

            <Button
                android:id="@+id/memory_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Wed Nov 14 11:56 EST 2018" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/memory_description_label"/>

            <EditText
                android:id="@+id/memory_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>